--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
-apply plugin: 'java'
+apply plugin: 'groovy'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 version = '1.0'
 
 repositories {
